# Generated by Django 5.2.8 on 2025-11-17 07:49

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="Aspect",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField()),
                ("number", models.CharField()),
            ],
        ),
        migrations.CreateModel(
            name="AuthorPublisherInfo",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField()),
                ("number", models.CharField()),
            ],
        ),
        migrations.CreateModel(
            name="Domain",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField()),
                ("number", models.CharField()),
            ],
        ),
        migrations.CreateModel(
            name="Institution",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField(max_length=100, unique=True)),
                ("website", models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name="Subject",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField()),
                ("number", models.CharField(unique=True)),
            ],
        ),
        migrations.CreateModel(
            name="CallNumber",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "aspect",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="call_numbers",
                        to="articles.aspect",
                    ),
                ),
                (
                    "author_pub",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="call_numbers",
                        to="articles.authorpublisherinfo",
                    ),
                ),
                (
                    "domain",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="call_numbers",
                        to="articles.domain",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Article",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "first_page",
                    models.URLField(
                        blank=True,
                        help_text="URL to image of the first page",
                        null=True,
                    ),
                ),
                ("published", models.DateTimeField(blank=True, null=True)),
                ("added", models.DateTimeField(null=True)),
                ("abstract", models.TextField(help_text="May be very large")),
                ("doi", models.CharField(blank=True, null=True)),
                (
                    "call_number",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="articles",
                        to="articles.callnumber",
                    ),
                ),
                ("institution", models.ManyToManyField(to="articles.institution")),
            ],
        ),
        migrations.CreateModel(
            name="Root",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField()),
                ("number", models.CharField()),
                (
                    "subject",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="roots",
                        to="articles.domain",
                    ),
                ),
            ],
        ),
        migrations.AddField(
            model_name="callnumber",
            name="root",
            field=models.ForeignKey(
                on_delete=django.db.models.deletion.PROTECT,
                related_name="call_numbers",
                to="articles.root",
            ),
        ),
        migrations.AddField(
            model_name="aspect",
            name="subject",
            field=models.ForeignKey(
                on_delete=django.db.models.deletion.PROTECT,
                related_name="aspects",
                to="articles.root",
            ),
        ),
        migrations.AddField(
            model_name="domain",
            name="subject",
            field=models.ForeignKey(
                on_delete=django.db.models.deletion.PROTECT,
                related_name="domains",
                to="articles.subject",
            ),
        ),
        migrations.AddField(
            model_name="callnumber",
            name="subject",
            field=models.ForeignKey(
                on_delete=django.db.models.deletion.PROTECT,
                related_name="call_numbers",
                to="articles.subject",
            ),
        ),
        migrations.CreateModel(
            name="Topic",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("name", models.CharField()),
                ("number", models.CharField()),
                (
                    "subject",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="topics",
                        to="articles.aspect",
                    ),
                ),
            ],
        ),
        migrations.AddField(
            model_name="callnumber",
            name="topic",
            field=models.ForeignKey(
                on_delete=django.db.models.deletion.PROTECT,
                related_name="call_numbers",
                to="articles.topic",
            ),
        ),
    ]
